--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "google_photo.jpg"
+  avatar           : "homepage_small.jpg"
   name             : "Xuhan Huang"
   pronouns         : # example: "she/her"  
   bio              : "Senior Year Undergraduate Student in Mathematics."
