--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,6 +13,8 @@ main:
 
   # - title: "Talks"
   #   url: /talks/    
+  - title: "Homepage"
+    url: /about
 
   - title: "Teaching"
     url: /teaching/    
